--- a/tarea.html
+++ b/tarea.html
@@ -18,7 +18,7 @@ function aceptar() {
 	var expregRut = /^[0-9]{1,2}.[0-9]{3}.[0-9]{3}-(k|[0-9]{1})$/; 
 
 	var patente = document.getElementById("patente").value;
-	var expregPatente = /^[A-aZ-z]{4}[0-9]{2}/;
+	var expregPatente = /^[A-aZ-z]{4}[0-9]{2}$/;
 	
 	
 	
